[package]
name = "texture-notes-v2"
version = "2.0.0"
authors = ["foo-dogsquared <foo.dogsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.5"
structopt = "0.3"
chrono = { version = "0.4.10", features = ["serde"] }
handlebars = "2.0.2"
walkdir = "2.2.9"
globwalk = "0.7.1"
directories = "2.0.2"

[dev-dependencies]
tempfile = "3.1.0"
