[package]
name = "texture-notes-cli"
version = "0.1.0"
authors = ["foo-dogsquared <foo.dogsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lib",
]

[dependencies]
directories = "2.0.2"
rayon = "1.3.0"
structopt = "0.3"
texture-notes-lib = {path = "lib"}
toml = "0.5.5"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[[bin]]
name = "texture-notes"
path = "src/main.rs"
